--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,15 +1,34 @@
+// {
+//     "root": true,
+//     "parserOptions": {
+//          "ecmaVersion": 12,
+//          "sourceType": "module"
+//     },
+//     "extends": ["eslint:recommended", "prettier"],
+//     "env": { 
+//          "es2021": true,
+//          "node": true
+//     },
+//     "rules": {
+//          "no-console": "off"
+//     }
+// }
+
 {
     "root": true,
     "parserOptions": {
-         "ecmaVersion": 12,
-         "sourceType": "module"
+        "ecmaVersion": "latest",
+        "sourceType": "module"
     },
-    "extends": ["eslint:recommended", "prettier"],
-    "env": { 
-         "es2021": true,
-         "node": true
+    "extends": ["eslint:recommended", "prettier", "airbnb-base"],
+    "env": {
+        "es2021": true,
+        "node": true,
+        "commonjs": true
     },
     "rules": {
-         "no-console": "off"
+        //"no-console": "error"
+        "no-useless-constructor": "off",
+        "indent": ["error", 3]
     }
 }
